close #2 - Set titlebar to green if the answer is correct and red if it is incorrect.   Extracted out the tracking logic of the code

--- a/source/styles/dialog.css
+++ b/source/styles/dialog.css
@@ -23,10 +23,12 @@
 }
 
 .ui-dialog-titlebar {
-    background: #b5c8cc;
+    background: #ffb261;
     border: 0;
     color: #fff;
     font-weight: normal;
     text-align: center;
 }
+
+
 
