closes #7, closes #1 - Added styling for the herb quiz and added tooltips to the progress circles

--- a/source/styles/dialog.css
+++ b/source/styles/dialog.css
@@ -1,5 +1,5 @@
 .ui-widget {
-    font-family: font-family: 'Raleway', sans-serif;
+    font-family:  'Raleway', sans-serif;
     font-size: 20pt;
 }
 
@@ -28,6 +28,13 @@
     color: #fff;
     font-weight: normal;
     text-align: center;
+}
+.ui-correct {
+    background: green;
+}
+
+.ui-incorrect {
+    background: red;
 }
 
 
